config-root/namespaces/jx-staging/spring-boot-http-gradle-jenkins-x/deployment.yaml
# Source: spring-boot-http-gradle-jenkins-x/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-http-gradle-jenkins-x-spring-boot-http-gradle-jenki
  labels:
    draft: draft-app
    chart: "spring-boot-http-gradle-jenkins-x-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: spring-boot-http-gradle-jenkins-x-spring-boot-http-gradle-jenki
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: spring-boot-http-gradle-jenkins-x-spring-boot-http-gradle-jenki
    spec:
      containers:
        - name: spring-boot-http-gradle-jenkins-x
          image: "10.101.44.164/jrcampos55/spring-boot-http-gradle-jenkins-x:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 400m
              memory: 512Mi
      terminationGracePeriodSeconds:
