config-root/namespaces/jx-staging/spring-boot-http-gradle-jenkins-x/service.yaml
# Source: spring-boot-http-gradle-jenkins-x/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-http-gradle-jenkins-x
  labels:
    chart: "spring-boot-http-gradle-jenkins-x-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-boot-http-gradle-jenkins-x-spring-boot-http-gradle-jenki
