config-root/namespaces/jx-staging/spring-boot-http-gradle-jenkins-x/ingress.yaml
# Source: spring-boot-http-gradle-jenkins-x/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: spring-boot-http-gradle-jenkins-x
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: spring-boot-http-gradle-jenkins-x
              servicePort: 80
      host: spring-boot-http-gradle-jenkins-x-jx.192.168.99.100.nip.io
